<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".RegisterFragment">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="45dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="25dp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:textSize="17sp"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="25dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_surnamename"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_birthday"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/e_mail"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_mobile"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="number"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_sex"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_height"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="numberDecimal"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_weight"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="numberDecimal"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/your_city"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:background="@drawable/et_custom"
                android:textSize="15sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_custom"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:text="@string/update"/>



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>