<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="400dp"
    android:minHeight="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/medicen_time_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/medice_dose"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="number"
            android:background="@drawable/et_custom"
            android:textSize="15sp"
            android:layout_marginTop="45sp"/>

        <EditText
            android:id="@+id/medicen_dose_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/medicen_time"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="number"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />




            <Button
                android:id="@+id/btn_register_medice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/register"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>